Fix width issue on IE 7

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1093,6 +1093,10 @@ td.extra {
 }
 
 /* REPORTS */
+#reports #settingsContent {
+  width: 100%;
+}
+
 .reportResult {
   margin:16px;
 }
